<?xml version="1.0"?>
<package>
  <name>robucar_2dnav</name>
  <version>0.1.0</version>
  <description>The robucar_2dnav package</description>

  <maintainer email="ily4s.abbas@gmail.com">Ilyas M. Abbas</maintainer>
  <author email="ily4s.abbas@gmail.com">Ilyas M. Abbas</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>robucar_controller</build_depend>
  <build_depend>robucar_description</build_depend>
  <build_depend>robucar_driver</build_depend>
  <build_depend>robucar_tele</build_depend>
  <run_depend>move_base</run_depend>
  <run_depend>robucar_controller</run_depend>
  <run_depend>robucar_description</run_depend>
  <run_depend>robucar_driver</run_depend>
  <run_depend>robucar_tele</run_depend>
  <run_depend>sicktoolbox_wrapper2</run_depend>

  <export></export>
</package>