<?xml version="1.0"?>
<package>
  <name>robucar_controller</name>
  <version>0.2.0</version>
  <description>The robucar_controller package</description>

  <maintainer email="ily4s.abbas@gmail.com">Ilyas M. Abbas</maintainer>
  <author email="ily4s.abbas@gmail.com">Ilyas M. Abbas</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>robucar_driver</run_depend>

  <export></export>
</package>