<?xml version="1.0"?>
<package>
  <name>robucar_description</name>
  <version>0.1.0</version>
  <description>The robucar_description package</description>

  <maintainer email="ily4s.abbas@gmail.com">Ilyas M. Abbas</maintainer>
  <author email="ily4s.abbas@gmail.com">Ilyas M. Abbas</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>