<?xml version="1.0"?>
<package>
  <name>robucar_driver</name>
  <version>0.3.0</version>
  <description>The robucar_driver package</description>

  <maintainer email="ily4s.abbas@gmail.com">Ilyas M. Abbas</maintainer>
  <author email="ily4s.abbas@gmail.com">Ilyas M. Abbas</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export></export>
</package>