<?xml version="1.0"?>
<package>
  <name>robucar_tele</name>
  <version>0.1.0</version>
  <description>The robucar_tele package</description>

  <maintainer email="ily4s.abbas@gmail.com">Ilyas M. Abbas</maintainer>
  <author email="ily4s.abbas@gmail.com">Ilyas M. Abbas</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robucar_driver</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>web_video_server</run_depend>
  <run_depend>robucar_driver</run_depend>

  <export></export>
</package>